# axum-playground

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  test.sh
.github/workflows/: ci.yml  rust.yml
migrations/2022-02-05-134136_add_users_table/: up.sql
migrations/2022-05-05-112444_add_created_at/: up.sql
migrations/2022-07-15-063208_add_meta_to_users/: up.sql
src/: main.rs  pagination.rs  schema.rs
tests/: foo_tests.rs  integration_test.rs
