[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "^1.0"
axum = "^0.6"
tokio = { version = "^1.29", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
jsonwebtoken = "^8"
log = "^0.4"
log4rs = '^1.0'
diesel = { version = "^2.0", features = ["postgres", "r2d2",  "serde_json", "chrono"] }
dotenv = "^0.15"
uuid = { version = "^1.3", features = ["serde", "v4"] }
chrono = {version = "^0.4", features = ["serde"]}
thiserror = "^1.0"