[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "^1.0"
axum = "*"
tokio = { version = "^1.39", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
jsonwebtoken = "*"
log = "^0.4"
log4rs = '^1.3'
diesel = { version = "^2.2", features = ["postgres", "r2d2",  "serde_json", "chrono"] }
dotenv = "^0.15"
uuid = { version = "^1.4", features = ["serde", "v4"] }
chrono = {version = "^0.4", features = ["serde"]}
thiserror = "^2.0"
tracing = { version = "^0.1" }
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "local-time"] }
time = { version = "^0.3", features = ["macros"] }
