[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "^1.0"
axum = "0.8"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "1.0"
jsonwebtoken = "*"
log = "^0.4"
log4rs = '^1.3'
diesel = { version = "2.2.11", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "^0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
